# technical-exercise_ipfs-uploader

./: Cargo.toml  README.md  contract.sol  docker-compose.yml  justfile
src/: cli.rs  contract_manager.rs  error.rs  ipfs_manager.rs  lib.rs  main.rs
