[package]
name = "ipfs-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.1", features = ["derive"] }

thiserror = "1.0"
anyhow = "1.0"

ethers = { version = "2.0", features = ["abigen", "rustls"] }
tokio = { version = "1.27", features = ["macros"] }

ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"], default-features = false }

# necessary because ethers-rs exports its dependencies' errors
url = "2.3.1"

# necessary because ipfs-api exports its dependencies' errors
http = "0.2"
